prometheus-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1                                                                                                                                                                             
kind: Ingress                                                                                                                                                                                                
metadata:       
  name: grafana-ingress                                                                                                                                                                                      
  namespace: monitoring                     
  annotations:    
    # Jika kamu pakai Nginx Ingress Controller
    kubernetes.io/ingress.class: nginx                      
spec:
  rules:                                                                                                                                                                                                     
  - host: "grafana.cluster.com"
    http:                                   
      paths:                            
      - path: /
        pathType: Prefix                                                                                                                                                                                     
        backend:
          service:                                                                                                                                                                                           
            name: kube-prometheus-stack-grafana
            port:                           
              number: 80
